Auto-scale the subtitles area based upon the size of the screen, also prevent the subtitles from scrolling up too high, leaving whitespace.

--- a/css/jquery.mobile-1.0a4.1.css
+++ b/css/jquery.mobile-1.0a4.1.css
@@ -1058,7 +1058,7 @@ a.ui-link-inherit {
 .ui-header .ui-title, .ui-footer .ui-title { text-align: center; font-size: 16px; display: block; margin: .6em 90px .8em;  padding: 0;  text-overflow: ellipsis; overflow: hidden; white-space: nowrap; outline: 0 !important; }
 
 /*content area*/
-.ui-content { border-width: 0; overflow: visible; overflow-x: hidden; padding: 15px; }
+.ui-content { border-width: 0; overflow: visible; /*overflow-x: hidden;*/ padding: 15px; }
 .ui-page-fullscreen .ui-content { padding:0; }
 
 /* icons sizing */
